# markji-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/source/: conf.py  index.rst
markji/: __init__.py  _const.py  _response.py  auth.py  card.py  chapter.py  const.py  content.py  deck.py  folder.py  profile.py  types.py  user.py
markji/editor/: __init__.py  choice.py  cloze.py  font.py  formula.py  media.py  paragraph.py  reference.py
markji/types/: __init__.py  _form.py  card.py  chapter.py  deck.py  folder.py  profile.py  user.py
tests/: __init__.py  test_auth.py  test_card.py  test_chapter.py  test_deck.py  test_editor.py  test_example.py  test_file.py  test_folder.py  test_profile.py  test_user.py  utils.py
